=== ALPHA 1 (v 0.8.1.0), 2011-03-05, NH 3.1.0 ===

[NHE-2] - Biref onetoone on pk
[NHE-3] - Support access="readonly"
[NHE-4] - Structs as components - querying
[NHE-6] - Bidirectional list support
[NHE-7] - Exception in AuditSync.BeforeCompletion is swallowed by (NH) AdoTransaction


=== ALPHA 2 (v 0.8.2.0), 2011-03-14, NH 3.1.0 ===

[NHE-5] - Documentation

*** Breaking changes ***
* Renamed IFluentAudit<T>.ExcludeRelation to ExcludeRelationData
* AuditMappedByAttribute no longer public for users. Handled automatically internally.
* Renamed envers.store_data_at_delete to nhibernate.envers.store_data_at_delete
* Renamed envers.do_not_audit_optimistic_locking_field to nhibernate.envers.do_not_audit_optimistic_locking_field


=== BETA 1 (v 0.9.1.0), ???, NH 3.1.0 ===